; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/smallapp/extr_unbound-anchor.c_count_unused.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/smallapp/extr_unbound-anchor.c_count_unused.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_list = type { %struct.ip_list*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ip_list*)* @count_unused to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @count_unused(%struct.ip_list* %0) #0 {
  %2 = alloca %struct.ip_list*, align 8
  %3 = alloca i32, align 4
  store %struct.ip_list* %0, %struct.ip_list** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %15, %1
  %5 = load %struct.ip_list*, %struct.ip_list** %2, align 8
  %6 = icmp ne %struct.ip_list* %5, null
  br i1 %6, label %7, label %19

7:                                                ; preds = %4
  %8 = load %struct.ip_list*, %struct.ip_list** %2, align 8
  %9 = getelementptr inbounds %struct.ip_list, %struct.ip_list* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %7
  %13 = load i32, i32* %3, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %3, align 4
  br label %15

15:                                               ; preds = %12, %7
  %16 = load %struct.ip_list*, %struct.ip_list** %2, align 8
  %17 = getelementptr inbounds %struct.ip_list, %struct.ip_list* %16, i32 0, i32 0
  %18 = load %struct.ip_list*, %struct.ip_list** %17, align 8
  store %struct.ip_list* %18, %struct.ip_list** %2, align 8
  br label %4

19:                                               ; preds = %4
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
